# zhiyi-authorization/src/main/resources/api-docs.json
@@ -85,6 +85,50 @@
         "deprecated": false,
         "x-order": "2147483647"
       }
+    },
+    "/captcha/image": {
+      "get": {
+        "tags": [
+          "oauth2"
+        ],
+        "summary": "图形验证码",
+        "operationId": "oauth2Captcha",
+        "produces": [
+          "*/*"
+        ],
+        "parameters": [
+          {
+            "name": "key",
+            "in": "query",
+            "description": "随机字符串",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "BearerToken": [
+              "global"
+            ]
+          }
+        ],
+        "deprecated": false,
+        "x-order": "2147483641"
+      }
     }
   },
   "securityDefinitions": {
